# org.gnu.libidn2-libidn2

./: .gitignore  CMakeLists.txt  build_artifact.py
.github/workflows/: main.yml
libidn2/: CMakeLists.txt
libidn2/installer/: install.lua  libidn2.xml
